bootstrap v4, ayudas, pagos, correccion de bug de dias, no ng-select2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
 			        <a class="nav-link" [routerLink]="['/register']">Precios</a>
 			      </li> -->
 			      <li class="nav-item">
-			        <a class="nav-link" [routerLink]="['/register']">Registro</a>
+			        <a class="nav-link" [routerLink]="['/registro']">Registro</a>
 			      </li>
 			      <li class="nav-item">
 			        <a class="nav-link" [routerLink]="['/login']">Login</a>
@@ -32,7 +32,7 @@
 						      {{currentUser.nombre}}
 						    </a>
 						    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="ddMenu">
-						      <a class="dropdown-item" [routerLink]="['/pass']">Cambiar Contraseña
+						      <a class="dropdown-item" [routerLink]="['/contrasena']">Cambiar Contraseña
 						      	<i class="fa fa-key" aria-hidden="true"></i>
 						      </a>
 						      <div class="dropdown-divider"></div>
@@ -61,9 +61,17 @@
             <li>
                 <a [routerLink]="['/reservas']">Reservas</a>
             </li>
-            <!-- <li>
+						<li>
+							<span style="color: white;">
+								<!-- <i class="fas fa-chart-area" aria-hidden="true"></i> -->
+								<!-- <i class="fas fa-chart-bar" aria-hidden="true"></i> -->
+								<i class="fa fa-area-chart" aria-hidden="true"></i>
+								Estadísticas
+							</span>
+						</li>
+            <li>
                 <a [routerLink]="['/pagos']">Pagos</a>
-            </li> -->
+						</li>
             <li>
                 <span style="color: white;">
                 	<i class="fa fa-cog" aria-hidden="true"></i>
