--- a/src/app/publico/login/login.component.html
+++ b/src/app/publico/login/login.component.html
@@ -13,7 +13,7 @@
                   <hr class="my-4">
                   <p>Si no tienes todavía tu cuenta crea una gratis!</p>
                   <p class="lead">
-                    <a class="btn btn-outline-primary btn-lg" [routerLink]="['/register']" role="button">Registrate</a>
+                    <a class="btn btn-outline-primary btn-lg" [routerLink]="['/registro']" role="button">Regístrate</a>
                   </p>
                 </div>
             </div>
