--- a/src/app/privado/adicional/adicional.component.html
+++ b/src/app/privado/adicional/adicional.component.html
@@ -1,76 +1,100 @@
-<div class="container default-container">
-	<div class="col-md-12">
-		<h2>
-			Adicionales
-			<button type="button" class="btn btn-danger rounded-circle border-0 pull-right" (click)="setNuevo()" data-toggle="modal" data-target="#adicionalModal">
-				<i class="fa fa-plus" aria-hidden="true"></i>
-			</button>
-		</h2>
-		<hr class="my-2">
-	</div>
-	<div class="col-md-12">
-		<div class="card">
-		  <div class="card-body">
-		    <h2>Registro
-		    	<small>Adicionales</small>
-		    </h2>
-				<table class="table table-striped table-responsive">
-				  <thead>
-				    <tr>
-				      <th width="60%">Adicional</th>
-				      <th width="30%">Tarifa</th>
-				      <th width="10%">Editar/Eliminar</th>
-				    </tr>
-				  </thead>
-				  <tbody>
-				    <tr *ngFor="let add of adds">
-				      <td width="60%">{{add.adicional}}</td>
-				      <td width="30%">{{add.tarifa | currency:'USD':true}}</td>
-				      <td width="10%" class="text-center">
-				      	<div class="btn-group grid-btn" role="group">
-						  <button type="button" (click)="setModi(add)" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#adicionalModal">
-						  	<i class="fa fa-pencil" aria-hidden="true"></i>
-						  </button>
-						  <button type="button" (click)="setElim(add)" class="btn btn-sm btn-outline-danger" data-toggle="modal" data-target="#confirmModal">
-						  	<i class="fa fa-trash" aria-hidden="true"></i>
-						  </button>
-						</div>
-				      </td>
-				    </tr>
-				  </tbody>
-				</table>
-		  </div>
+<div class="container">
+	<h3 class="display-4">Adicionales</h3>
+	<hr class="my-2">
+</div>
+<div class="container">
+	<div class="row">
+		<div class="col-lg-9 col-md-10 col-sm-12">
+			<h2>
+				Registros({{adds.length}})
+				<button type="button" class="btn btn-danger rounded-circle border-0 pull-right" (click)="setNuevo()" data-toggle="modal"
+				 data-target="#adicionalModal">
+					<i class="fa fa-plus" aria-hidden="true"></i>
+				</button>
+			</h2>
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th width="60%">Adicional</th>
+						<th width="30%">Tarifa</th>
+						<th width="10%">Editar/Eliminar</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr *ngFor="let add of adds">
+						<td width="60%">{{add.adicional}}</td>
+						<td width="30%">{{add.tarifa | currency:'USD':true}}</td>
+						<td width="10%" class="text-center">
+							<div class="btn-group grid-btn" role="group">
+								<button type="button" (click)="setModi(add)" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#adicionalModal">
+									<i class="fa fa-pencil" aria-hidden="true"></i>
+								</button>
+								<button type="button" (click)="setElim(add)" class="btn btn-sm btn-outline-danger" data-toggle="modal" data-target="#confirmModal">
+									<i class="fa fa-trash" aria-hidden="true"></i>
+								</button>
+							</div>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div><div class="col-lg-3 col-md-2 col-sm-12" id="sidebar">
+		
+			<div class="card mt-2">
+				<div class="card-body">
+					<h4 class="card-title">Ayuda</h4>
+					<p class="card-text">
+						Registra, edita o elimina los servicios adicionales que manejas en tu hospedaje. Los adicionales se pueden registrar al momento de hacer una reserva y/o mientras no se haya hecho el proceso de check-out.
+					</p>
+					<!-- <ul>
+						<li *ngFor="let op of tipos">{{op.tipotarifa}}</li>
+					</ul> -->
+				</div>
+			</div>
+		
+			<div class="card mt-2">
+				<div class="card-body">
+					<h4 class="card-title">Notificaciones</h4>
+					<!-- <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6> -->
+					<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A eveniet unde ipsum, autem sunt, aperiam, quam harum quibusdam
+						consectetur, sed doloribus? Reprehenderit expedita quam aperiam recusandae, quasi. Ratione, illum, aliquam!
+					</p>
+				</div>
+			</div>
+		
 		</div>
 	</div>
 </div>
 <!-- MODAL ADICIONAL -->
 <div *ngIf="model" class="modal fade" id="adicionalModal">
-  <div class="modal-dialog modal-md" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Adicional</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-	    <form name="form" class="col-md-12" (ngSubmit)="f.form.valid && guardar(f)" #f="ngForm" [ngClass]="{ 'was-validated': f.submitted }" novalidate>
-	        <div class="form-group">
-	            <label for="adicional">Nombre</label>
-	            <input type="text" class="form-control col-md-8" name="adicional" [(ngModel)]="model.adicional" #adicional="ngModel" maxlength="100" required />
-	            <div *ngIf="f.submitted && !adicional.valid" class="invalid-feedback">El nombre del servicio adicional es requerido</div>
-	        </div>
-	        <div class="form-group">
-	            <label for="tarifa">Tarifa</label>
-	            <input type="text" class="form-control col-md-4" name="tarifa" [(ngModel)]="model.tarifa" #adicional="ngModel" appMoneda="true" required />
-	            <div *ngIf="f.submitted && !adicional.valid" class="invalid-feedback">La tarifa es requerida</div>
-	        </div>
-	        <div class="modal-footer">
-						<img *ngIf="loading" src="/assets/images/loading.svg" />
-	          <button *ngIf="!loading" type="submit" class="btn btn-primary">Guardar
-	          </button>
-	          <button *ngIf="!loading" type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-	        </div>
-	    </form>
-    </div>
-  </div>
+	<div class="modal-dialog modal-md" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title">Adicional</h5>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<form name="form" class="col-md-12" (ngSubmit)="f.form.valid && guardar(f)" #f="ngForm" [ngClass]="{ 'was-validated': f.submitted }"
+			 novalidate>
+				<div class="form-group">
+					<label for="adicional">Nombre</label>
+					<input type="text" class="form-control col-md-8" name="adicional" [(ngModel)]="model.adicional" #adicional="ngModel" maxlength="100"
+					 required />
+					<div *ngIf="f.submitted && !adicional.valid" class="invalid-feedback">El nombre del servicio adicional es requerido</div>
+				</div>
+				<div class="form-group">
+					<label for="tarifa">Tarifa</label>
+					<input type="text" class="form-control col-md-4" name="tarifa" [(ngModel)]="model.tarifa" #adicional="ngModel" appMoneda="true"
+					 required />
+					<div *ngIf="f.submitted && !adicional.valid" class="invalid-feedback">La tarifa es requerida</div>
+				</div>
+				<div class="modal-footer">
+					<img *ngIf="loading" src="/assets/images/loading.svg" />
+					<button *ngIf="!loading" type="submit" class="btn btn-primary">Guardar
+					</button>
+					<button *ngIf="!loading" type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+				</div>
+			</form>
+		</div>
+	</div>
 </div>
