--- a/src/app/privado/habitacion/habitacion.component.html
+++ b/src/app/privado/habitacion/habitacion.component.html
@@ -1,5 +1,69 @@
-<div class="container default-container">
-	<div class="col-md-12">
+<div class="container">
+	<h3 class="display-4">Habitaciones</h3>
+	<hr class="my-2">
+</div>
+<div class="container">
+	<div class="row">
+		<div class="col-lg-9 col-md-10 col-sm-12">
+			<h3>
+				Registros({{rooms.length}})
+				<button type="button" class="btn btn-danger rounded-circle border-0 pull-right" (click)="setNuevo()" data-toggle="modal"
+				 data-target="#habitacionModal">
+					<i class="fa fa-plus" aria-hidden="true"></i>
+				</button>
+			</h3>
+			<hr>
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th width="25%">#Habitación</th>
+						<th width="60%">Nombre</th>
+						<!-- <th width="25%">Tarifa</th> -->
+						<th width="15%">Editar/Eliminar</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr *ngFor="let room of rooms">
+						<td width="25%">{{room.noHabitacion}}</td>
+						<td width="60%">{{room.habitacion}}</td>
+						<!-- <td width="25%">{{room.tarifa | currency:'USD':true}}</td> -->
+						<td width="15%" class="text-center">
+							<div class="btn-group grid-btn" role="group">
+								<button type="button" (click)="setModi(room)" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#habitacionModal">
+									<i class="fa fa-pencil" aria-hidden="true"></i>
+								</button>
+								<button type="button" (click)="setElim(room)" class="btn btn-sm btn-outline-danger" data-toggle="modal" data-target="#confirmModal">
+									<i class="fa fa-trash" aria-hidden="true"></i>
+								</button>
+							</div>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		<div class="col-lg-3 col-md-2 col-sm-12" id="sidebar">
+
+			<div class="card mt-2">
+				<div class="card-body">
+					<h4 class="card-title">Ayuda</h4>
+					<p class="card-text">
+						Registra, edita o elimina las habitaciones de tu hospedaje. Las habitaciones que registres se actualizarán en el calendario de reservas.
+					</p>
+				</div>
+			</div>
+
+			<div class="card mt-2">
+				<div class="card-body">
+					<h4 class="card-title">Notificaciones</h4>
+					<!-- <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6> -->
+					<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A eveniet unde ipsum, autem sunt, aperiam, quam harum quibusdam
+						consectetur, sed doloribus? Reprehenderit expedita quam aperiam recusandae, quasi. Ratione, illum, aliquam!</p>
+				</div>
+			</div>
+
+		</div>
+	</div>
+	<!-- <div class="col-md-12">
 		<h2>
 			Habitaciones
 			<button type="button" class="btn btn-danger rounded-circle border-0 pull-right" (click)="setNuevo()" data-toggle="modal"
@@ -8,45 +72,7 @@
 			</button>
 		</h2>
 		<hr class="my-2">
-	</div>
-	<div class="col-md-12">
-		<div class="card">
-			<div class="card-body">
-				<h2>Registro
-					<small>Habitaciones</small>
-				</h2>
-				<table class="table table-striped table-responsive">
-					<thead>
-						<tr>
-							<th width="25%">#Habitación</th>
-							<th width="60%">Nombre</th>
-							<!-- <th width="25%">Tarifa</th> -->
-							<th width="25%"></th>
-							<th width="15%">Editar/Eliminar</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr *ngFor="let room of rooms">
-							<td width="25%">{{room.noHabitacion}}</td>
-							<td width="60%">{{room.habitacion}}</td>
-							<!-- <td width="25%">{{room.tarifa | currency:'USD':true}}</td> -->
-							<td width="25%"></td>
-							<td width="15%" class="text-center">
-								<div class="btn-group grid-btn" role="group">
-									<button type="button" (click)="setModi(room)" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#habitacionModal">
-										<i class="fa fa-pencil" aria-hidden="true"></i>
-									</button>
-									<button type="button" (click)="setElim(room)" class="btn btn-sm btn-outline-danger" data-toggle="modal" data-target="#confirmModal">
-										<i class="fa fa-trash" aria-hidden="true"></i>
-									</button>
-								</div>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-		</div>
-	</div>
+	</div> -->
 </div>
 <!-- MODAL HABITACION -->
 <div *ngIf="model" class="modal fade" id="habitacionModal">
