--- a/src/app/privado/home/home.component.html
+++ b/src/app/privado/home/home.component.html
@@ -3,29 +3,21 @@
 	<hr class="my-2">
 </div>
 <div class="container">
-  <div class="row">
-    <div class="col-lg-9 col-md-10 col-sm-12">
+	<div class="row">
+		<div class="col-lg-9 col-md-10 col-sm-12">
 			<div class="row">
 				<div class="col-md-8">
 					<h3 class="display-5">{{modiFecha}}</h3>
 				</div>
 				<div class="col-md-4">
-					<div class="row">
-						<div class="input-group col-md-10 ml-auto mr-auto">
-						  <span class="input-group-btn">
-								<button class="btn btn-side" type="button" (click)="previousDate()">
-									<i class="fa fa-chevron-left" aria-hidden="true"></i>
-								</button>
-						  </span>
-						  <!-- <input type="text" class="form-control" placeholder="Product name" aria-label="Product name"> -->
-							<my-date-picker name="mydate" [options]="myDatePickerOptions"
-                    [(ngModel)]="fecha" (dateChanged)="onDateChanged($event)"></my-date-picker>
-						  <span class="input-group-btn">
-								<button class="btn btn-side" type="button" (click)="nextDate()">
-									<i class="fa fa-chevron-right" aria-hidden="true"></i>
-								</button>
-						  </span>
-						</div>
+					<div class="p-1">
+						<button class="btn btn-side mb-4" type="button" (click)="previousDate()">
+							<i class="fa fa-chevron-left" aria-hidden="true"></i>
+						</button>
+						<my-date-picker name="mydate" [options]="myDatePickerOptions" [(ngModel)]="fecha" (dateChanged)="onDateChanged($event)"></my-date-picker>
+						<button class="btn btn-side mb-4" type="button" (click)="nextDate()">
+							<i class="fa fa-chevron-right" aria-hidden="true"></i>
+						</button>						
 					</div>
 				</div>
 			</div>
@@ -34,26 +26,26 @@
 				<button type="button" class="btn btn-primary btn-sm" data-toggle="offcanvas">Notificaciones</button>
 			</p> -->
 			<ul class="nav nav-tabs" id="myTab" role="tablist">
-			  <li class="nav-item">
-			    <a class="nav-link active" id="llegadas-tab" data-toggle="tab" href="#llegadas" role="tab" aria-controls="home" aria-expanded="true">Llegadas{{ ' (' + llegadas.length + ')'}}</a>
-			  </li>
-			  <li class="nav-item">
-			    <a class="nav-link" id="salidas-tab" data-toggle="tab" href="#salidas" role="tab" aria-controls="salidas">Salidas{{ ' (' + salidas.length + ')'}}</a>
-			  </li>
-			  <li class="nav-item">
-			    <a class="nav-link" id="estancias-tab" data-toggle="tab" href="#estancias" role="tab" aria-controls="estancias">Estancias{{ ' (' + estancias.length + ')'}}</a>
-			  </li>
+				<li class="nav-item">
+					<a class="nav-link active" id="llegadas-tab" data-toggle="tab" href="#llegadas" role="tab" aria-controls="home" aria-expanded="true">Llegadas{{ ' (' + llegadas.length + ')'}}</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" id="salidas-tab" data-toggle="tab" href="#salidas" role="tab" aria-controls="salidas">Salidas{{ ' (' + salidas.length + ')'}}</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" id="estancias-tab" data-toggle="tab" href="#estancias" role="tab" aria-controls="estancias">Estancias{{ ' (' + estancias.length + ')'}}</a>
+				</li>
 			</ul>
 			<div class="tab-content" id="myTabContent">
-			  <div class="tab-pane fade show active" id="llegadas" role="tabpanel" aria-labelledby="llegadas-tab">
+				<div class="tab-pane fade show active" id="llegadas" role="tabpanel" aria-labelledby="llegadas-tab">
 					<br>
 					<app-card-reserva [reservas]="llegadas"></app-card-reserva>
 				</div>
-			  <div class="tab-pane fade" id="salidas" role="tabpanel" aria-labelledby="salidas-tab">
+				<div class="tab-pane fade" id="salidas" role="tabpanel" aria-labelledby="salidas-tab">
 					<br>
 					<app-card-reserva [reservas]="salidas"></app-card-reserva>
 				</div>
-			  <div class="tab-pane fade" id="estancias" role="tabpanel" aria-labelledby="estancias-tab">
+				<div class="tab-pane fade" id="estancias" role="tabpanel" aria-labelledby="estancias-tab">
 					<br>
 					<app-card-reserva [reservas]="estancias"></app-card-reserva>
 				</div>
@@ -67,20 +59,33 @@
 			</div>
 			<hr class="my-2">
 			<app-card-reserva [reservas]="reservadosDb"></app-card-reserva>
-    </div><!--/span-->
+		</div>
+		<!--/span-->
 
-    <div class="col-lg-3 col-md-2 col-sm-12" id="sidebar">
+		<div class="col-lg-3 col-md-2 col-sm-12" id="sidebar">
 
-			<div class="card">
-			  <div class="card-body">
-			    <h4 class="card-title">Notificaciones</h4>
-			    <!-- <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6> -->
-			    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A eveniet unde ipsum, autem sunt, aperiam, quam harum quibusdam consectetur, sed doloribus? Reprehenderit expedita quam aperiam recusandae, quasi. Ratione, illum, aliquam!</p>
-			    <!-- <a href="#" class="card-link">Card link</a>
-			    <a href="#" class="card-link">Another link</a> -->
-			  </div>
+			<div class="card mt-2">
+				<div class="card-body">
+					<h4 class="card-title">Ayuda</h4>
+					<p class="card-text">
+						Encuentra las llegadas, las salidas y las estancias de tus pasajeros filtradas por fechas.
+					</p>
+				</div>
 			</div>
 
-  </div><!--/row-->
-	<app-modal-estados [model]="model"></app-modal-estados>
-</div><!--/.container-->
+			<div class="card mt-3">
+				<div class="card-body">
+					<h4 class="card-title">Notificaciones</h4>
+					<!-- <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6> -->
+					<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A eveniet unde ipsum, autem sunt, aperiam, quam harum quibusdam
+						consectetur, sed doloribus? Reprehenderit expedita quam aperiam recusandae, quasi. Ratione, illum, aliquam!</p>
+					<!-- <a href="#" class="card-link">Card link</a>
+			    <a href="#" class="card-link">Another link</a> -->
+				</div>
+			</div>
+
+		</div>
+		<!--/row-->
+		<app-modal-estados [model]="model"></app-modal-estados>
+	</div>
+	<!--/.container-->
