--- a/src/app/publico/registro/registro.component.html
+++ b/src/app/publico/registro/registro.component.html
@@ -1,80 +1,87 @@
 <div class="container">
-  <div class="col-md-6 ml-auto mr-auto">
-      <h2>Registro</h2>
-      <div class="card mt-4">
-        <div class="card-body">
-          <h4 class="card-subtitle mb-2 sub">Hospedaje</h4>
-          <hr class="my-2">
-          <form name="form" (ngSubmit)="f.form.valid && guardar(f)" #f="ngForm" [ngClass]="{ 'was-validated': f.submitted }" novalidate>
-              <div class="form-group">
-                  <label for="hospedaje">Nombre del hopedaje</label>
-                  <input type="text" class="form-control" name="hospedaje" [(ngModel)]="model.hospedaje" #hospedaje="ngModel" required />
-                  <div *ngIf="f.submitted && !hospedaje.valid" class="invalid-feedback">El nombre del hospedaje es requerido</div>
-              </div>
-              <div class="form-group">
-                  <label for="correo">Correo</label>
-                  <div class="input-group">
-                    <input type="email" class="form-control col-md-11" name="correo" [(ngModel)]="model.correo" #correo="ngModel" (blur)="correo.valid && getUser()" [email]="true" aria-describedby="hbmail" required />
-                    <img *ngIf="goCorreo" class="col-md-2" src="/assets/images/loading.svg" />
-                  </div>
-                  <small id="hbmail" class="form-text text-muted">Este correo servirá para el inicio de sesión del administrador del hospedaje</small>
-                  <div *ngIf="f.submitted && !correo.valid" class="invalid-feedback">Ingrese un electrónico válido</div>
-                  <div *ngIf="correo.touched && !correo.valid && !f.submitted">
-                    <p class="text-danger">Ingrese un electrónico válido</p>
-                  </div>
-                  <div *ngIf="valid_correo">
-                    <p class="text-warning">Usuario ya registrado</p>
-                  </div>
-              </div>
-              <div class="form-group">
-                  <label for="pais">Pais</label>
-                  <select2 [data]="paises" [value]="valuePa" (valueChanged)="changedPa($event)" name="pais" width="100%" ></select2><!--  [readonly]="!noPass" -->
-                  <!-- <div *ngIf="f.submitted && !pais.valid" class="invalid-feedback">El país es requerido</div> -->
-              </div>
-              <div class="form-group">
-                  <label for="ciudad">Ciudad</label>
-                  <input type="text" class="form-control" name="ciudad" [(ngModel)]="model.ciudad" #ciudad="ngModel" required />
-                  <div *ngIf="f.submitted && !ciudad.valid" class="invalid-feedback">La ciudad es requerida</div>
-              </div>
-              <div class="form-group">
-                  <label for="direccion">Dirección</label>
-                  <input type="text" class="form-control" name="direccion" [(ngModel)]="model.direccion" #direccion="ngModel" required />
-                  <div *ngIf="f.submitted && !direccion.valid" class="invalid-feedback">La dirección es requerida</div>
-              </div>
-              <h4 class="card-subtitle mb-2 sub">Administrador</h4>
-              <hr class="my-2">
-              <div class="form-group">
-                  <label for="nombre">Nombre del administrador</label>
-                  <input type="text" class="form-control" name="nombre" [(ngModel)]="model.nombre" #nombre="ngModel" required />
-                  <div *ngIf="f.submitted && !nombre.valid" class="invalid-feedback">El nombre del administrador es requerido</div>
-              </div>
-              <div class="form-group">
-                  <label for="nombre">Usuario</label>
-                  <input type="email" class="form-control" name="correo" [(ngModel)]="model.correo" #correo="ngModel" [email]="true" readonly="true" />
-              </div>
-              <div class="form-group">
-                  <label for="password">Contraseña</label>
-                  <input type="password" class="form-control" name="password" [(ngModel)]="model.password" #password="ngModel" (ngModelChange)="valuechange_pass($event)" required />
-                  <div *ngIf="f.submitted && !password.valid" class="invalid-feedback">La contraseña es requerida</div>
-              </div>
-              <div class="form-group">
-                  <label for="password0">Repetir la contraseña</label>
-                  <input type="password" class="form-control" name="password0" [(ngModel)]="model.password0" #password0="ngModel" (ngModelChange)="valuechange_pass($event)" required />
-                  <div *ngIf="f.submitted && !password0.valid" class="invalid-feedback">Repita la contraseña</div>
-                  <div *ngIf="valid_pass">
-                    <p class="text-warning">Las contraseñas no coinciden</p>
-                  </div>
-                  <div *ngIf="valid_pass0">
-                    <p class="text-warning">La contraseñas debe contener al menos 6 caracteres</p>
-                  </div>
-              </div>
-              <div class="form-group">
-                  <img *ngIf="loading" src="/assets/images/loading.svg" />
-                  <button *ngIf="!loading" class="btn btn-primary">Registrarse</button>
-                  <a *ngIf="!loading" [routerLink]="['/login']" class="btn btn-link">Cancelar</a>
-              </div>
-          </form>
+    <div class="col-md-6 ml-auto mr-auto">
+        <h2>Registro</h2>
+        <div class="card mt-4">
+            <div class="card-body">
+                <h4 class="card-subtitle mb-2 sub">Hospedaje</h4>
+                <hr class="my-2">
+                <form name="form" (ngSubmit)="f.form.valid && guardar(f)" #f="ngForm" [ngClass]="{ 'was-validated': f.submitted }" novalidate>
+                    <div class="form-group">
+                        <label for="hospedaje">Nombre del hopedaje</label>
+                        <input type="text" class="form-control" name="hospedaje" [(ngModel)]="model.hospedaje" #hospedaje="ngModel" required />
+                        <div *ngIf="f.submitted && !hospedaje.valid" class="invalid-feedback">El nombre del hospedaje es requerido</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="correo">Correo</label>
+                        <div class="input-group">
+                            <input type="email" class="form-control col-md-11" name="correo" [(ngModel)]="model.correo" #correo="ngModel" (blur)="correo.valid && getUser()"
+                                [email]="true" aria-describedby="hbmail" required />
+                            <img *ngIf="goCorreo" class="col-md-2" src="/assets/images/loading.svg" />
+                        </div>
+                        <small id="hbmail" class="form-text text-muted">Este correo servirá para el inicio de sesión del administrador del hospedaje</small>
+                        <div *ngIf="f.submitted && !correo.valid" class="invalid-feedback">Ingrese un electrónico válido</div>
+                        <div *ngIf="correo.touched && !correo.valid && !f.submitted">
+                            <p class="text-danger">Ingrese un electrónico válido</p>
+                        </div>
+                        <div *ngIf="valid_correo">
+                            <p class="text-warning">Usuario ya registrado</p>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="pais">Pais</label>
+                        <select id="pais" name="pais" style="width: 100%">
+                            <option *ngFor="let pais of paises" [value]="pais.id">{{pais.text}}</option>
+                        </select>
+                        <!-- <select2 [data]="paises" [value]="valuePa" (valueChanged)="changedPa($event)" name="pais" width="100%" ></select2> [readonly]="!noPass" -->
+                        <!-- <div *ngIf="f.submitted && !pais.valid" class="invalid-feedback">El país es requerido</div> -->
+                    </div>
+                    <div class="form-group">
+                        <label for="ciudad">Ciudad</label>
+                        <input type="text" class="form-control" name="ciudad" [(ngModel)]="model.ciudad" #ciudad="ngModel" required />
+                        <div *ngIf="f.submitted && !ciudad.valid" class="invalid-feedback">La ciudad es requerida</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="direccion">Dirección</label>
+                        <input type="text" class="form-control" name="direccion" [(ngModel)]="model.direccion" #direccion="ngModel" required />
+                        <div *ngIf="f.submitted && !direccion.valid" class="invalid-feedback">La dirección es requerida</div>
+                    </div>
+                    <h4 class="card-subtitle mb-2 sub">Administrador</h4>
+                    <hr class="my-2">
+                    <div class="form-group">
+                        <label for="nombre">Nombre del administrador</label>
+                        <input type="text" class="form-control" name="nombre" [(ngModel)]="model.nombre" #nombre="ngModel" required />
+                        <div *ngIf="f.submitted && !nombre.valid" class="invalid-feedback">El nombre del administrador es requerido</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="nombre">Usuario</label>
+                        <input type="email" class="form-control" name="correo" [(ngModel)]="model.correo" #correo="ngModel" [email]="true" readonly="true"
+                        />
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Contraseña</label>
+                        <input type="password" class="form-control" name="password" [(ngModel)]="model.password" #password="ngModel" (ngModelChange)="valuechange_pass($event)"
+                            required />
+                        <div *ngIf="f.submitted && !password.valid" class="invalid-feedback">La contraseña es requerida</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="password0">Repetir la contraseña</label>
+                        <input type="password" class="form-control" name="password0" [(ngModel)]="model.password0" #password0="ngModel" (ngModelChange)="valuechange_pass($event)"
+                            required />
+                        <div *ngIf="f.submitted && !password0.valid" class="invalid-feedback">Repita la contraseña</div>
+                        <div *ngIf="valid_pass">
+                            <p class="text-warning">Las contraseñas no coinciden</p>
+                        </div>
+                        <div *ngIf="valid_pass0">
+                            <p class="text-warning">La contraseñas debe contener al menos 6 caracteres</p>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <img *ngIf="loading" src="/assets/images/loading.svg" />
+                        <button *ngIf="!loading" class="btn btn-primary">Registrarse</button>
+                        <a *ngIf="!loading" [routerLink]="['/login']" class="btn btn-link">Cancelar</a>
+                    </div>
+                </form>
+            </div>
         </div>
-      </div>
-  </div>
+    </div>
 </div>
