--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 @import "../node_modules/font-awesome/css/font-awesome.css";
 @import "../node_modules/toastr/build/toastr.min.css";
+@import "../node_modules/select2/dist/css/select2.min.css";
 @import "./app/css/estilos.css";
